--- a/Sandy_20190417_Data_Q2/Views/Home/Dashboard.cshtml
+++ b/Sandy_20190417_Data_Q2/Views/Home/Dashboard.cshtml
@@ -51,7 +51,7 @@
     <tr></tr>
  @functions{
      public static double Day (double day)
-     {return Math.Floor(day/24);}
+     {return Math.Floor(day/1440);}
      public static double Hour(double hour)
      { return Math.Round((hour/ 60), 2); ; }
      }
@@ -62,7 +62,7 @@
         <td></td>
 
         <td>Ticket:@Model.Sum(Model => Model.Ticket)</td>
-        <td>AvgResponseMinutes:@Model.Average(Model => Model.ResponseMinutes) ( @Day(@Model.Average(Model => Model.ResponseMinutes)) Day       /  @Hour(@Model.Average(Model => Model.ResponseMinutes)) Hour /        @Model.Average(Model => Model.ResponseMinutes) Minutes)</td>
+        <td>AvgResponseMinutes:@Model.Average(Model => Model.ResponseMinutes) Minutes ( @Day(@Model.Average(Model => Model.ResponseMinutes)) Day       /  @Hour(@Model.Average(Model => Model.ResponseMinutes)) Hour )</td>
 
     </tr>
 </table>
